# dlt_course

./: .gitignore  hello.py  lesson1.ipynb  lesson2.ipynb  lesson3.ipynb  pyproject.toml
lesson4/: github_api_pipeline.py  lesson4.ipynb
lesson4/.dlt/: config.toml
lesson4/content/fs_data/_dlt_loads/: sql_database__1735486615.204166.jsonl  sql_database__1735486979.0563378.jsonl  sql_database__1735487118.453986.jsonl  sql_database__1735487487.5219069.jsonl
lesson4/content/fs_data/_dlt_pipeline_state/: fs_pipeline__1735486615.204166__f9f017eeb1752708043762a6efc4200f2210f7db861d189fbf7eac3711218c3b.jsonl
lesson4/content/fs_data/_dlt_version/: sql_database__1735486617.050346__f9f017eeb1752708043762a6efc4200f2210f7db861d189fbf7eac3711218c3b.jsonl  sql_database__1735487489.26195__4b32f4d61f3acd666f7924cc1f83bd893ff2f3e93a96c945687c7d4389d77dab.jsonl
lesson4/content/fs_data/family/: 1735486615.204166.30369c0e1b.parquet  1735486979.0563378.2ab3fe4fe6.parquet  1735487118.453986.a26acb23d9.parquet
lesson4/content/fs_data/family/data/: 00000-0-e97a2619-3984-4a43-8463-5c32614f517a.parquet
lesson5/: github_lesson5_ex1.duckdb  lesson5.ipynb  poke_pipeline.duckdb  poke_pipeline_dedup.duckdb  poke_pipeline_incremental.duckdb  poke_pipeline_merge.duckdb
lesson6/: lesson6.ipynb  my_2pipeline.duckdb  my_pipelin3e.duckdb  my_pipeline.duckdb  my_second_pipeline.duckdb
lesson7/: lesson7.ipynb
lesson7/schemas/export/: github_source.schema.yaml
lesson7/schemas/import/: github_source.schema.yaml
lesson8/: github_pipeline_lesson8_source.duckdb  lesson8.ipynb
(+4 files in other folders)
