[project]
name = "dlt-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alive-progress>=3.2.0",
    "dlt[duckdb,pyiceberg,sql-database]>=1.5.0",
    "enlighten>=1.13.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "sqlglot>=26.0.1",
    "streamlit>=1.41.1",
    "tqdm>=4.67.1",
]
